# OpenGLPend

./: CMakeLists.txt  LICENSE  OpenGLPend.cpp  PendCalc.cpp  PendCalc.h  README.md  Resource.h  stdafx.cpp
